--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,20 @@
 body{
+  Font-family:  "Roboto", "Arial", sans-serif;
+  Font-style: Regular;
+  Font-size: 16px;
+  Line-height: 24px;
+  background-color: rgb(218, 214, 214);
   border-top: 5px solid #ff7500;
   width: 1440px;
   margin: 50px auto;
-  font-family: sans-serif;
-  border-left: 1px solid #ccc;
-  border-right: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  font-family: "Roboto", "Arial", sans-serif;
 }
 
+.wrapper{
+  background-color: #fff;
+}
+
+/* Saytning Bosh Qismi */
 header{
   margin: 0 170px;
   height: 91px;
@@ -20,6 +27,7 @@ header img {
 }
 
 nav{
+  font-family: "Roboto" "Arial" sans-serif;
   margin-top: 36px;
   display: block;
   justify-content: space-between;
@@ -32,14 +40,21 @@ nav{
 }
 
 .header-btn{
-  width: 170px;
+  Font-family: Roboto;
+  Font-style: Bold;
+  Font-size: 13px;
+  Line-height: 15px;
+  line-height: 100%;
   height: 39px;
+  color: #ffffff;
   background-color: #FF7500;
   border-radius: 4px;
   margin-top: 26px;
   padding: 12px 24px;
   box-sizing: border-box;
 }
+
+ /* Saytning Birinchi Bo'limi */
 
 .block{
   background-color: #252420;
@@ -56,17 +71,123 @@ nav{
   height: 328px;
 }
 
+.hr{
+  width: 80px;
+  height: 3px;
+  background-color: #FF7500;
+}
+
+.test-hr{
+  margin-bottom: 40px;
+}
+
+.image-book{
+  margin-right: 170px;
+  border-radius: 10px;
+}
+
+/* Saytning ikkichi bo'limi */
+
+.block_two{
+  margin: 210px auto;
+  padding: 0 170px;
+}
+
+.buy{
+  width: 30%;
+}
+
+.icon{
+  padding: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #ff77003a;
+}
+
+/* Saytning uchunchi bo'limi */
+
+.block_three{
+  width: 1100px;
+  margin: 120px auto 160px;
+  background-color: #252420;
+  color: white;
+  padding: 10px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box_three{
+  margin: 64px;
+  width: 440px;
+  height: 291px;
+}
+
+span{
+  color: #FF7500;
+}
+
+.image-books{
+  margin-right: 60px;
+  border-radius: 12px;
+}
+
+/* Saytning footer qismi yani oxirgi bo'limi */
+
+.but{
+  display: flex;
+  justify-content: space-between;
+}
+
+.to_go{
+  display: block;
+  justify-content: right;
+}
+
+.footer_menyu{
+  margin: 18px;
+  display: flex;
+}
+
+footer{
+  margin: 0 auto;
+  padding: 0 170px 56px 170px;
+}
+
+.ftr{
+  display: flex;
+  justify-content: space-between;
+}
+
+.content{
+  width: 224px;
+}
+
+ /* class bilan nom berilmagan atributlar */
+
 h1{
-  font-size: 72px;
-  font-style: bold;
+  Font-family: Roboto Condensed;
+  Font-style: Bold;
+  Font-size: 72px;
+  Line-height: 86px;
 }
 
 h2{
-  font-size: 40px;
+  margin: 0;
+  Font-family: Roboto Condensed;
+  Font-style: Bold;
+  Font-size: 40px;
+  line-height: 48px;
 }
 
 h3{
-  font-size: 24px;
+  Font-family: Roboto Condensed;
+  Font-style: Bold;
+  Font-size: 24px;
+  Line-height: 29px;
 }
 
 a{
@@ -84,95 +205,4 @@ p{
   line-height: 24px;
   font-size: 16px;
   font: bold;
-}
-
-span{
-  color: #FF7500;
-}
-
-.hr{
-  width: 80px;
-  height: 3px;
-  background-color: #FF7500;
-}
-
-.image{
-  margin-right: 170px;
-  border-radius: 8px;
-}
-
-.images{
-  margin-right: 60px;
-  border-radius: 12px;
-}
-
-.buy{
-  width: 30%;
-}
-
-.icon{
-  padding: 25px;
-  box-sizing: border-box;
-  text-align: center;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #ff770071;
-}
-
-.goo{
-  display: block;
-  justify-content: right;
-}
-
-.block_two{
-  width: 1100px;
-  margin: 120px auto 160px;
-  background-color: #252420;
-  color: white;
-  padding: 10px;
-  border-radius: 12px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.box_two{
-  margin: 64px;
-  width: 440px;
-  height: 291px;
-}
-
-.test{
-  margin: 210px auto;
-  width: 1100px;
-  height: 536px;
-}
-
-.ftr{
-  display: flex;
-  justify-content: space-between;
-}
-
-.btn{
-  margin-top: 22px;
-  width: 160px;
-  height: 39px;
-  background-color: #FF7500;
-  padding: 10px 10px;
-  border-radius: 4px;
-}
-
-.btn:hover{
-  cursor: pointer;
-}
-
-.but{
-  display: flex;
-  justify-content: space-between;
-}
-
-
-footer{
-  margin: 0 auto;
-  width: 1100px;
 }
