--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,111 @@
 body{
   Font-family:  "Roboto", "Arial", sans-serif;
   Font-style: Regular;
-  Font-size: 16px;
-  Line-height: 24px;
-  background-color: rgb(218, 214, 214);
-  border-top: 5px solid #ff7500;
-  width: 1440px;
-  margin: 50px auto;
   font-family: "Roboto", "Arial", sans-serif;
+  background-color: rgb(218, 214, 214);
+}
+
+*{
+  margin: 0;
 }
 
 .wrapper{
   background-color: #fff;
+  Font-size: 16px;
+  Line-height: 24px;
+  border-top: 5px solid #ff7500;
+  width: 1440px;
+  margin: 50px auto;
 }
 
 /* Saytning Bosh Qismi */
+
 header{
+  padding-top: 16px;
+  padding-bottom: 16px;
   margin: 0 170px;
-  height: 91px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-header img {
-  margin-top: 15px;
-}
+.sait-icon{
+  transition: opacity 0.4s ease;
+ }
+
+ .sait-icon:hover{
+   opacity: 0.8;
+ }
+
+ .sait-icon:active{
+   opacity: 0.6;
+ }
 
 nav{
-  font-family: "Roboto" "Arial" sans-serif;
-  margin-top: 36px;
+  font-family: "Roboto", "Arial", sans-serif;
   display: block;
   justify-content: space-between;
   text-transform: uppercase;
 }
 
-.menyu{
-  margin: 1px;
+
+.menyu {
+  margin-right: 32px;
+  display: flex;
+  Font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 500;
+  Font-size: 13px;
+  Line-height: 15px;
+  transition: color 0.4s ease, opacity 0.4 ease;
+}
+
+.sitenav-item{
+  margin-right  : 32px;
+}
+
+.sitenav-item:last-child{
+  margin-right: 0;
+}
+
+.menyu a{
+  text-decoration: none;
+  color: black;
+}
+
+.menyu a:active {
+  opacity: 0.6;
+}
+
+.menyu a:hover {
+  color: #ff7500;
+}
+
+.link-nav{
+  align-items: center;
   display: flex;
 }
 
 .header-btn{
+  display: inline-block;
+  text-decoration: none;
   Font-family: Roboto;
-  Font-style: Bold;
   Font-size: 13px;
   Line-height: 15px;
-  line-height: 100%;
+  font-weight: bold;
   height: 39px;
   color: #ffffff;
   background-color: #FF7500;
   border-radius: 4px;
-  margin-top: 26px;
   padding: 12px 24px;
   box-sizing: border-box;
+}
+
+.header-btn:hover{
+  opacity: 0.8;
+}
+
+.header-btn:active{
+  opacity: 0.6;
 }
 
  /* Saytning Birinchi Bo'limi */
@@ -59,26 +113,28 @@ nav{
 .block{
   background-color: #252420;
   color: white;
-  padding: 10px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
 .box{
-  margin-top: 80px;
   margin-left: 170px;
   width: 387px;
-  height: 328px;
 }
 
-.hr{
+.test-hr{
+  margin-bottom: 40px;
   width: 80px;
   height: 3px;
   background-color: #FF7500;
 }
 
-.test-hr{
-  margin-bottom: 40px;
+.hr{
+  margin-bottom: 24px;
+  width: 80px;
+  height: 3px;
+  background-color: #FF7500;
 }
 
 .image-book{
@@ -89,8 +145,7 @@ nav{
 /* Saytning ikkichi bo'limi */
 
 .block_two{
-  margin: 210px auto;
-  padding: 0 170px;
+  padding: 210px 170px;
 }
 
 .buy{
@@ -98,7 +153,10 @@ nav{
 }
 
 .icon{
-  padding: 25px;
+  margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   text-align: center;
   width: 100px;
@@ -111,17 +169,17 @@ nav{
 
 .block_three{
   width: 1100px;
-  margin: 120px auto 160px;
+  margin: 0 auto 216px;
   background-color: #252420;
   color: white;
-  padding: 10px;
   border-radius: 12px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
 .box_three{
-  margin: 64px;
+  margin-left: 64px;
   width: 440px;
   height: 291px;
 }
@@ -137,38 +195,73 @@ span{
 
 /* Saytning footer qismi yani oxirgi bo'limi */
 
+footer{
+  margin: 0 auto;
+  padding: 56px 170px;
+}
+
 .but{
+  margin-bottom: 40px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
-.to_go{
-  display: block;
-  justify-content: right;
-}
-
 .footer_menyu{
-  margin: 18px;
   display: flex;
+  transition: color 0.4s ease;
 }
 
-footer{
-  margin: 0 auto;
-  padding: 0 170px 56px 170px;
+.footer_menyu svg {
+  margin-right: 16px;
+  color: #252420;
+}
+
+.footer_menyu svg:hover {
+  color: #ff7500;
+}
+
+.footer_menyu svg:active {
+  opacity: 0.6;
+}
+
+.footer-hr{
+  border: 0;
+  height: 2px;
+  background-color: #25242086;
+  margin-bottom: 64px;
 }
 
 .ftr{
   display: flex;
   justify-content: space-between;
+  transition: color 0.4 ease;
+}
+.ftr a {
+  text-decoration: none;
+  color: black;
+}
+
+.ftr a:hover {
+  color: #ff7500;
+}
+
+.ftr a:active {
+  opacity: 0.6;;
 }
 
 .content{
+  Font-family: Roboto;
+  Font-size: 16px;
+  Line-height: 19px;
   width: 224px;
 }
 
  /* class bilan nom berilmagan atributlar */
 
 h1{
+  margin: 0;
+  margin-bottom: 72px;
   Font-family: Roboto Condensed;
   Font-style: Bold;
   Font-size: 72px;
@@ -176,7 +269,7 @@ h1{
 }
 
 h2{
-  margin: 0;
+  margin-bottom: 24px;
   Font-family: Roboto Condensed;
   Font-style: Bold;
   Font-size: 40px;
@@ -184,24 +277,21 @@ h2{
 }
 
 h3{
+  margin-bottom: 12px;
   Font-family: Roboto Condensed;
   Font-style: Bold;
   Font-size: 24px;
   Line-height: 29px;
 }
 
-a{
-  margin-right: 32px;
-  color: #000000;
-  text-decoration: none;
-}
-
-li{
+ul{
+  justify-content: space-between;
   list-style-type: none;
   padding: 0;
 }
 
 p{
+  margin-bottom: 32px;
   line-height: 24px;
   font-size: 16px;
   font: bold;
