--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ body{
   margin: 0;
 }
 
+*:focus{
+  outline: 2px dotted #ff7500;
+  outline-offset: 2px;
+}
+
 .wrapper{
   background-color: #fff;
   Font-size: 16px;
@@ -111,9 +116,10 @@ nav{
  /* Saytning Birinchi Bo'limi */
 
 .block{
-  background-color: #252420;
-  color: white;
+  padding: 50px 0 50px;
   display: flex;
+  color: white;
+  background-color: #252420;
   align-items: center;
   justify-content: space-between;
 }
@@ -138,6 +144,7 @@ nav{
 }
 
 .image-book{
+  box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
   margin-right: 170px;
   border-radius: 10px;
 }
@@ -149,7 +156,7 @@ nav{
 }
 
 .buy{
-  width: 30%;
+  width: 26%;
 }
 
 .icon{
@@ -169,11 +176,12 @@ nav{
 
 .block_three{
   width: 1100px;
-  margin: 0 auto 216px;
-  background-color: #252420;
-  color: white;
-  border-radius: 12px;
   display: flex;
+  border-radius: 12px;
+  margin: 0 auto 216px;
+  padding: 50px 0 50px;
+  color: white;
+  background-color: #252420;
   align-items: center;
   justify-content: space-between;
 }
@@ -213,8 +221,13 @@ footer{
 }
 
 .footer_menyu svg {
-  margin-right: 16px;
+  display: block;
+  margin-left: 16px;
   color: #252420;
+}
+
+.footer_menyu svg a{
+  display: block;
 }
 
 .footer_menyu svg:hover {
