--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body{
 }
 
 .wrapper{
-  background-color: #E5E5E5;
+  background-color: #fff;
   Font-size: 16px;
   Line-height: 24px;
   border-top: 5px solid #ff7500;
@@ -28,9 +28,7 @@ body{
 
 .sait-header{
   background-color: #fff;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  margin: 0 170px;
+  padding: 16px 170px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -66,7 +64,6 @@ nav{
   font-weight: 500;
   Font-size: 13px;
   Line-height: 15px;
-  transition: color 0.4s ease, opacity 0.4s ease;
 }
 
 .sitenav-item{
@@ -75,6 +72,7 @@ nav{
 
 .menyu a{
   text-decoration: none;
+  transition: color 0.4s ease, opacity 0.4s ease;
   color: black;
 }
 
@@ -98,6 +96,7 @@ nav{
   border-radius: 4px;
   padding: 12px 24px;
   box-sizing: border-box;
+  transition: 0.4s;
 }
 
 .btn:hover{
@@ -153,7 +152,7 @@ nav{
 
 .block_two{
   background-color: #FFFFFF;
-  padding: 210px 170px;
+  padding: 210px 210px;
   margin-bottom: 120px;
 }
 
@@ -180,7 +179,7 @@ nav{
   width: 1100px;
   display: flex;
   border-radius: 12px;
-  margin: 0 auto 216px;
+  margin: 0 auto 160px;
   padding: 50px 0 50px;
   color: white;
   background-color: #252420;
@@ -199,6 +198,11 @@ nav{
 }
 .text p{
   margin-bottom: 12px;
+}
+
+.text p:last-child{
+  font-family: "Roboto", "Arial", sans-serif;
+  font-weight: 700;
 }
 
 span{
@@ -230,14 +234,22 @@ span{
   transition: color 0.4s ease;
 }
 
-.footer_menyu svg {
-  display: block;
-  margin-left: 16px;
-  color: #252420;
+.footer-link{
+  margin-right: 16px;
+
 }
 
-.footer_menyu svg a{
+.footer-link:last-child{
+  margin-right: 0;
+}
+
+.footer_menyu a{
+  display: flex;
+}
+
+.footer_menyu svg {
   display: block;
+  color: #252420;
 }
 
 .footer_menyu svg:hover {
@@ -262,6 +274,7 @@ span{
 }
 .ftr a {
   color:#252420;
+  transition: color 0.4s ;
 }
 
 .ftr a:hover {
@@ -273,10 +286,19 @@ span{
 }
 
 .content{
-  Font-family: Roboto;
+  Font-family:  "Roboto" "Arial" sans-serif;
   Font-size: 16px;
+  font-weight: 400;
   Line-height: 19px;
   width: 224px;
+}
+
+.content li{
+  margin-bottom: 16px;
+}
+
+.content li:last-child{
+  margin-bottom: 0;
 }
 
  /* class bilan nom berilmagan atributlar */
@@ -291,8 +313,8 @@ h1{
 
 h2{
   margin-bottom: 24px;
-  Font-family: Roboto Condensed;
-  font-weight: bold;
+  Font-family: "Roboto Condensed" "Arial" sans-serif;
+  font-weight: 700;
   Font-size: 40px;
   line-height: 48px;
 }
