Hamburger link fixed

--- a/css/main.css
+++ b/css/main.css
@@ -524,13 +524,20 @@ span{
     display: none;
   }
 
+  .site-header-open .open-button {
+    position: fixed;
+    right: 20px;
+    overflow: hidden;
+  }
+
   .site-header-open .sitenav__list {
-    position: absolute;
+    position: fixed;
     top: 85px;
     right: 20px;
     display: block;
     z-index: 51;
     text-align: end;
+    overflow: hidden;
   }
 
   .sitenav__item {
@@ -560,6 +567,7 @@ span{
     content: "";
     z-index: 50;
     background-color: #ccc;
+    overflow: hidden;
   }
 
   .hero {
@@ -699,6 +707,12 @@ span{
   }
 }
 
+@media only screen and (max-width: 550px) {
+  .site-header__btn {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .feature__heading {
     font-size: 58px;
@@ -734,9 +748,6 @@ span{
 }
 
 @media only screen and (max-width: 450px) {
-  .site-header__container {
-    flex-wrap: wrap;
-  }
 
   .site-header__icon {
     order: -1;
@@ -749,16 +760,6 @@ span{
     max-width: 155px;
     order: 1;
     margin-right: auto;
-  }
-
-  .site-header__sitenav-block {
-    width: 100%;
-    margin-top: 20px;
-  }
-
-  .open-button {
-    margin-right: auto;
-    order: -1;
   }
 
   .hero__hr-one {
@@ -862,6 +863,13 @@ span{
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .site-header__img {
+    width: 220px;
+    height: 45px;
   }
 }
 
